# gurbani-explorer

./: .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json
src/: App.css  App.tsx  main.tsx  style.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  server.rs  settings.rs
src-tauri/static/: style.css
src-tauri/templates/: message.html  overlay.html  settings.html
src/components/BaniPanel/: index.tsx
src/components/RecentPanel/: index.tsx
src/components/SearchPanel/: SearchList.tsx  index.tsx
src/components/SettingPanel/: index.tsx
src/components/ShabadDisplay/: index.tsx
src/components/ShabadPanel/: ShabadList.tsx  index.tsx
src/models/: Pankti.tsx
src/state/: ActionTypes.tsx  Interfaces.tsx
src/state/providers/: AppProvider.tsx  BaniProvider.tsx  SearchProvider.tsx  SettingContext.tsx  ShabadProvider.tsx
src/ui/: FormatAndBreakText.tsx  LoadingScreen.tsx  SettingInput.tsx  ShabadTheme.tsx  Tab.tsx  TabIcons.tsx
src/utils/: BaniPositionTracker.ts  DB.tsx  Format.tsx  TauriCommands.ts  useAutoHideCursor.ts  useShabadNavigation.ts  useTheme.ts
