[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Serde for JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP requests
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async ecosystem
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.30"
tauri-plugin-store = "2.3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
